neohio-natives/style.css
body {
  font-family: Helvetica;
  background-image: url('./images/bark.jpg');
  color: #5f2b07;
}
header {
  position: sticky;
  top: 0;
  background: #172709e8;
  border-bottom: 2px solid #5f2b07;
  text-shadow: 1px 1px #1e2712;
  color: #f4a065;
  width: 96%;
  padding: 10px;
  margin: 0 auto;
  height: 118px;
}
footer {
  background: #172709e8;
  border-top: 2px solid #5f2b07;
  width: 102%;
  text-shadow: 1px 1px #1e2712;
  color: #f4a065;
  padding: 10px;
  width: 96%;
  margin: 0 auto;
}
footer span {
  font-size: 14px;
}
a {
  color: #f4a065;
}
a:hover {
  font-weight: bold;
}
footer span:first-child {
  display: block;
  margin-top: 25px;
}
footer span:last-child {
  display: block;
  margin-top: 5px;
}
div.plant {
  border: 1px solid lightgrey;
  background-size: cover;
  box-shadow: 2px 2px 1px #354e35;
  margin: 8px;
}
div.plant.large {
  margin: 29px;
}
div.plant.mid {
  margin: 13px;
}
div.small-photo-container div.plant {
  box-shadow: 1px 1px 1px #354e35;
}
div.mid-photo-container div.plant {
  box-shadow: 1px 1px 1px #354e35;
}

div.plant:hover {
  box-shadow: 1px 1px 1px white;
  border: 1px solid #354e35;
}
span.info {
  width: 100%;
  color: white;
  padding: 7px;
  font-size: 14px;
  font-style: italic;
}
div.proportionate {
  display: none;
  flex-wrap: wrap;
  align-items: center;
}
div.proportionate-plant {
  border-radius: 100%;
  border: 1px solid lightgrey;
  background-size: cover;
  box-shadow: 2px 2px 1px #354e35;
  margin: 8px;
}
div.photo-container {
  width: 96%;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  border: 2px solid #5f2b07;
  background: #25190dd6;
  padding: 8px;
  margin-bottom: -18px;
  justify-content: center;
}

div.mid-photo-container {
  width: 96%;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  border: 2px solid #5f2b07;
  background: #25190dd6;
  padding: 8px;
  justify-content: center;
}

div.small-photo-container {
  width: 96%;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  border: 2px solid #5f2b07;
  background: #25190dd6;
  padding: 8px;
  justify-content: center;
}

span {
  font-size: 16px;
}
span.label {
  font-size: 20px;
  font-family: 'Rowdies', cursive;
  font-weight: 300;
}
span.instruction {
  font-style: italic;
  font-size: 14px;
}
span.click {
  font-size: 14px;
  color: white;
  height: fit-content;
  width: fit-content;
  background: #271d10;
  padding: 10px;
  border: 1px solid #5f2c07;
  box-shadow: 1px 1px 1px #1f1e1e;
  display: block;
  text-align: center;
  margin: 0 auto;
  margin-top: 13px;
}
span.click:hover {
  cursor: pointer;
}

body.grid div.plant.large {
  width: 300px !important;
  height: 300px !important;
}

div.information {
  background: #ffffff;
  display: none;
  padding: 10px;
  padding-bottom: 0;
  height: fit-content;
  border: 2px solid #364e35;
  box-shadow: 1px 1px 1px black;
}

div.information.showing {
  display: block;
}

img.thumbnail {
  width: 300px;
  height: 300px;
  margin: 25px;
  object-fit: cover;
}

span.close {
  cursor: pointer;
  font-size: 25px;
  float: right;
  margin-right: 2px;
}
a.more  {
  float: left;
}

div.plant {
  color: transparent;
}
div.photo-container div.plant span, div.less-large-photo-container div.plant span {
  display: block;
}
div.photo-container img.butterfly, div.less-large-photo-container img.butterfly {
  opacity: 0;
  float: left;
}
div.photo-container div.plant:hover span, div.less-large-photo-container div.plant:hover span {
  color: black;
}
div.photo-container div.plant:hover img.butterfly, div.less-large-photo-container div.plant:hover img.butterfly {
  opacity: 1;
}
div.photo-container span.count, div.less-large-photo-container span.count {
  padding: 7px;
}
div.photo-container div.plant:hover span.hover, div.less-large-photo-container div.plant:hover span.hover {
  background: #ffffff87;
  height: 36px;
}
div.photo-container div.plant:hover span.name, div.less-large-photo-container div.plant:hover span.name {
float: right;
margin-top: -44px;
margin-right: 4px;
}


div.plant {
  color: transparent;
}
body.proportionate-body div.mid-photo-container div.plant span.hover {
  width: 75px;
  height: fit-content;
}
body.proportionate-body div.mid-photo-container div.plant:hover span.hover {
border: 1px solid white;
}
div.mid-photo-container div.plant span{
  display: block;
}
div.mid-photo-container img.butterfly {
  opacity: 0;
  float: left;
}
div.mid-photo-container div.plant:hover span{
  color: black;
  font-size: 12px;
}
div.mid-photo-container div.plant:hover img.butterfly {
  opacity: 1;
  width: 22px;
}
div.mid-photo-container span.count {
  padding: 7px;
}
div.mid-photo-container div.plant:hover span.hover {
  background: #ffffff87;
  height: fit-content;
}
div.mid-photo-container div.plant span.name {
margin-top: -15px;
margin-right: 4px;
display: none;
}
div.mid-photo-container div.plant:hover span.name {
  display: block;
}

body.grid div.mid-photo-container div.plant {
  width: 150px !important;
  height: 150px !important;
}

div.small-photo-container img.butterfly {
  opacity: 0;
}
div.small-photo-container img.butterfly {
  opacity: 0;
  float: left;
}
div.small-photo-container div.plant:hover span{
  color: black;
  font-size: 12px;
  width: 150px;
  height: 150px;
}
div.small-photo-container div.plant:hover img.butterfly {
  opacity: 1;
  width: 22px;
}
div.small-photo-container span.count {
  padding: 7px;
}
div.small-photo-container div.plant:hover span.hover {
  background: #ffffff87;
  height: fit-content;
  width: 70px;
  display: block;
}
body.proportionate-body div.small-photo-container div.plant:hover span.hover {
    border: 1px solid white;
}
div.small-photo-container div.plant span.name {
margin-top: -15px;
margin-right: 4px;
}
body.grid div.small-photo-container div.plant {
  width: 70px !important;
  height: 70px !important;
}

@media only screen and (max-width: 400px){

  div.information {
    width: 325px;
  }
  body {
    width: 94%;
  }
  div.photo-container, div.mid-container, div.small-photo-container {
    justify-content: center;
  }
  header {
    height: 168px;
  }
  div.plant.large {
    margin: 10px;
  }
  div.plant.mid {
    margin: 8px;
  }
  div.plant.small {
    margin: 6px;
  }
}

